# selective-rope

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  schedule_lm.py  train_language_modeling.py
benchmarks/: bench_selective_rope.py
synthetic_tasks/mad/: generate_data.py  pyproject.toml  schedule_mad.py
synthetic_tasks/mad/configs/layers/: delta_net_nope.yml  delta_net_rope.yml  delta_net_selective_rope.yml  gla_nope.yml  gla_rope.yml  gla_selective_rope.yml  gla_selective_rope_bias.yml  gla_selective_rope_bias_phase_gate.yml  gla_selective_rope_phase_gate.yml  gla_selective_rope_weight_norm.yml  swiglu.yml
synthetic_tasks/mad/src/mad/: analysis.py  benchmark.py  configs.py  metrics.py  paths.py  registry.py  train.py
synthetic_tasks/mad/src/mad/data/: __init__.py  dataset.py  instances.py
synthetic_tasks/mad/src/mad/model/: __init__.py  auto_encoder.py  language_model.py  pl_model_wrapper.py
synthetic_tasks/mad/src/mad/model/layers/: __init__.py  attention.py  attention_linear.py  delta_net.py  gla.py  hyena.py  mamba.py  mlp.py
synthetic_tasks/state_tracking/: generate_data.py  pyproject.toml  schedule_state_tracking.py
synthetic_tasks/state_tracking/src/state_tracking/: main.py  metrics.py  utils.py
synthetic_tasks/zoology/: pyproject.toml  run_experiments.sbatch
synthetic_tasks/zoology/src/zoology/: config.py  launch.py  logger.py  model.py  train.py  utils.py
synthetic_tasks/zoology/src/zoology/analysis/: __init__.py  mqar_d_model.py  mqar_taylor.py  mqar_taylor_kv.py  num_kv.py  utils.py
synthetic_tasks/zoology/src/zoology/analysis/paper/: based_figure1.py  based_wall_clock.py  zoology_figure2.py
synthetic_tasks/zoology/src/zoology/analysis/sabri/: 01-25_num_kv.py  01-26_tradeoff.py
synthetic_tasks/zoology/src/zoology/data/: ar_extrapolate.py  associative_recall.py  circuits.py  utils.py
synthetic_tasks/zoology/src/zoology/experiments/: models_repo.py  mqar_dmodel.py  mqar_taylor.py  mqar_taylor_kv.py
synthetic_tasks/zoology/src/zoology/experiments/030325_new_arch/: configs.py
synthetic_tasks/zoology/src/zoology/experiments/arxiv24_based_appendix/: configs.py  plot.py
synthetic_tasks/zoology/src/zoology/experiments/arxiv24_based_figure2/: configs.py  plot.py
synthetic_tasks/zoology/src/zoology/experiments/arxiv24_based_figure3/: configs.py  plot.py
synthetic_tasks/zoology/src/zoology/experiments/arxiv24_based_rebuttal_circuits/: binary_majority.py  configs.py  majority.py  parity.py
synthetic_tasks/zoology/src/zoology/experiments/examples/: basic.py  basic_sweep.py
synthetic_tasks/zoology/src/zoology/experiments/iclr24_zoology_figure2/: configs.py
synthetic_tasks/zoology/src/zoology/experiments/sabri/: 01-26_extrap.py  01-27_feature_map.py  01-28_taylor_low.py  01-31_tradeoff.py  02-01_sliding.py  02-09_harder_yet.py  02-09_new_feature_maps.py  mqar_taylor_kv.py
synthetic_tasks/zoology/src/zoology/mixers/: attention.py  base_conv.py  based.py  bigbird.py  convolution.py  deepseek_nsa.py  delta_net.py  gated_delta_net.py  gated_deltaproduct.py  gla.py  hybrid.py  hyena.py  listing.py  mamba.py  mamba2.py  mlp.py  rwkv.py  rwkv5.py  rwkv7.py  scatterbrain_new.py  selective.py  slide_attn.py
synthetic_tasks/zoology/src/zoology/mixers/deepseek/: local_attention.py  rotary.py
synthetic_tasks/zoology/src/zoology/mixers/feature_maps/: all_poly.py  base.py  cosformer.py  exp_dim.py  performer.py  taylor.py
synthetic_tasks/zoology/src/zoology/mixers/h3/: dplr.py  h3.py  hippo.py  ss_kernel.py  ss_kernel_diag.py  ss_kernel_shift.py
synthetic_tasks/zoology/src/zoology/mixers/mamba_ssm/: selective_scan_interface.py
synthetic_tasks/zoology/src/zoology/mixers/mra/: __init__.py  attention.py  autograd_function.py  kernel.py  mra.py
synthetic_tasks/zoology/src/zoology/mixers/nystromformer/: __init__.py  attn.py  attn_mask.py  core.py  nystromformer.py  utils.py
synthetic_tasks/zoology/src/zoology/mixers/scatterbrain/: attn.py  feature_maps_sb.py  masking.py  projection_utils.py  scatterbrain_utils.py
(+103 files in other folders)
